# text-generation-webui

./: bitsandbytes.nix  flake.nix  pyproject.toml  requirements.txt
