[tool.poetry]
name = "text-generation-webui"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10"
accelerate = "0.20.3"
colorama = "^0.4.6"
datasets = "^2.12.0"
fastapi = "0.95.2"
flexgen = "0.1.7"
gradio-client = "0.2.5"
gradio = "3.33.1"
markdown = "^3.4.3"
numpy = "^1.24.2"
pandas = "<2.0"
pillow = ">=9.5.0"
pyyaml = "^6.0"
requests = "^2.30.0"
rwkv = "0.7.3"
safetensors = "0.3.1"
sentencepiece = "^0.1.99"
tqdm = "^4.65.0"
peft = {git = "https://github.com/huggingface/peft"}
transformers = "4.30.2"
bitsandbytes = "0.40.0"
llama-cpp-python = "0.1.70"
orjson = "<=3.8.10"

[tool.poetry.dev-dependencies]
# build systems for dependencies
hatchling = "^1.3.1"

[tool.poetry.group.nvidia.dependencies]
torch = "2.0.0"
torchaudio = "2.0.1"
torchvision = "0.15.1"


[tool.poetry.group.mpt.dependencies]
einops = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
