[tool.poetry]
name = "text-generation-webui"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10"
accelerate = "0.21.0"
colorama = "^0.4.6"
datasets = "^2.12.0"
fastapi = "0.95.2"
flexgen = "0.1.7"
gradio-client = "0.2.5"
gradio = "3.33.1"
markdown = "^3.4.3"
numpy = "^1.24.2"
pandas = "^2.0.3"
pillow = ">=9.5.0"
pyyaml = "^6.0"
requests = "^2.30.0"
rwkv = "0.7.3"
safetensors = "0.3.1"
sentencepiece = "^0.1.99"
tqdm = "^4.65.0"
peft = {git = "https://github.com/huggingface/peft"}
transformers = "4.31.*"
bitsandbytes = "0.41.0"
orjson = "<=3.9.2"
llama-cpp-python-cuda = {path = ".venv/src/llama_cpp_python_cuda/llama_cpp_python_cuda-0.1.77+cu118-cp310-cp310-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]
# build systems for dependencies
hatchling = "^1.3.1"

[tool.poetry.group.nvidia.dependencies]
llama-cpp-python-cuda = "0.1.77+cu118"
torch = "2.0.1+cu118"
torchaudio = "2.0.2+cu118"
torchvision = "0.15.2+cu118"


[tool.poetry.group.mpt.dependencies]
einops = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
